--- a/wp-content/themes/yoyo-tube/package.json
+++ b/wp-content/themes/yoyo-tube/package.json
@@ -4,8 +4,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production npx webpack",
-    "start": "cross-env NODE_ENV=development npx webpack --watch"
+    "build": "cross-env NODE_ENV=production npx webpack --mode production",
+    "start": "cross-env NODE_ENV=development npx webpack --watch --mode development"
   },
   "keywords": [
     "wordpress",
