Stripe Payment Method added

--- a/wp-content/themes/yoyo-tube/composer.json
+++ b/wp-content/themes/yoyo-tube/composer.json
@@ -30,7 +30,8 @@
       "Classes\\": "inc/classes",
       "Core\\": "inc/classes/core",
       "Videos\\": "inc/classes/core/videos",
-      "Authentication\\": "inc/classes/core/authentication"
+      "Authentication\\": "inc/classes/core/authentication",
+      "Stripe\\": "inc/classes/core/stripe"
     }
   },
   "config": {
